# android_device_motorola_msm8226-common

./: Android.mk  BoardConfigCommon.mk  README.md  check-firmware-files.sh  cm.dependencies  common-proprietary-files.txt  dt.img  extract-files.sh  mkbootimg.mk  moto_com.sh  msm8226.mk  msm8226.mk.orig  proprietary-files.txt  proprietary-files.txt.bak  proprietary-files.txt~  releasetools.py  setup-makefiles.sh  system.prop  system_prop.mk
CMActions/: AndroidManifest.xml  proguard.flags
aplogd/: log_io.c
audio/: customplatform.c
bluetooth/: bdroid_buildcfg.h
camera/: Android.mk  CameraWrapper.cpp
charge_only_mode/: Android.mk
cmactions/: AndroidManifest.xml
config/: audio_effects.conf  audio_policy.conf  izat.conf  media_codecs.xml  media_profiles.xml  mixer_paths.xml  mixer_paths_boost.xml  mixer_paths_p1.xml  snd_soc_msm_Tapan  snd_soc_msm_Tapan9302  snd_soc_msm_Tapan_SKUF
config/backup_config/: audio_policy.conf
configs/: audio_effects.conf  audio_platform_info.xml  audio_policy.conf  media_codecs.xml  media_codecs_performance.xml  media_profiles.xml  mixer_paths.xml  sec_config  thermal-engine-8226.conf
doze/: AndroidManifest.xml
ebtables/: Android.mk
ebtables/br-nf-bds/: README
ebtables/docs/: arptables-faq.html  brnf-faq.html  (+4 more)
ebtables/userspace/libebtc/: ChangeLog  Makefile.am  Makefile.in  README  ToDo  aclocal.m4  autogen.sh  configure  configure.in
ebtables/userspace/libebtc/include/: Makefile.am  Makefile.in  config.h.in  libebtc.h
ebtables/userspace/libebtc/src/: Makefile.am  Makefile.in  ebtc.c
ebtables/userspace/libebtc/test/: Makefile.am  Makefile.in  ebtc_test1.c  ebtc_test2.c  util.c
fm/: Android.mk
gps/: Android.mk
include/: device_perms.h
keylayout/: gpio-keys.kl  keylayout.mk
keylayouts/: msm8226-tapan9302-snd-card_Button_Jack.kl
libc_moto_symbols/: Android.mk  moto_log.c
libdmitry/: libdmitry.c
liblight/: Android.mk  NOTICE  lights.c
libmoto/: Android.mk  moto_camera.c  moto_log.c  moto_ril.c
libsensors/: Android.mk
libshims/: Android.mk  wvm.c
permissions/: com.motorola.context.xml  com.motorola.smartaction.xml  com.motorola.software.fmrecording.xml
power/: Android.mk  power.c  power.h
ril-wrapper/: Android.mk  ril-wrapper.c
rootdir/: Android.mk
sepolicy/: akmd8963.te  atvc.te  batt_health.te  bootanim.te  camera.te  cameraserver.te  charge_only_mode.te  detect-gpe.te  device.te  dtv-jelly.te  dtv_app.te  dump_pds.te  file.te  file_contexts  fsck.te  hw_revs.te  init.te  init.te.rej  jellyservice.te  kernel.te  mac_permissions.xml  mediaserver.te  mm-pp-daemon.te  mm-qcamerad.te  mount_pds.te  mpdecision.te  operator.te  perfprofd.te  property.te  property_contexts  qti_init_shell.te  rild.te  rmt_storage.te  seapp_contexts  sensord.te  sensors_device.te  servicemanager.te  sysfs_devices_sensors.te  system_app.te  system_server.te  (+6 more)
wifi/: Android.mk  WCNSS_qcom_cfg.ini  p2p_supplicant_overlay.conf  wpa_supplicant_overlay.conf
(+384 files in other folders)
