

AC_PREREQ(2.53)


dnl
dnl Version settings
dnl

AC_INIT(EBTC, 0.1.0, libebtc@bugreport.1in1.de)
AM_INIT_AUTOMAKE(EBTC, 0.1.0)

EBTC_LT_CURRENT=1
EBTC_LT_REVISION=0
EBTC_LT_AGE=1

AC_SUBST(EBTC_LT_CURRENT)
AC_SUBST(EBTC_LT_REVISION)
AC_SUBST(EBTC_LT_AGE)



dnl
dnl Arguments
dnl



dnl
dnl General checks
dnl

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_C_BIGENDIAN
AC_STDC_HEADERS



dnl
dnl Options
dnl

AM_MAINTAINER_MODE
AM_PROG_LIBTOOL


dnl
dnl Check headers
dnl

AC_CHECK_HEADERS(linux/netfilter_bridge/ebtables.h,
                 [],
                 [ AC_MSG_ERROR([

ERROR: kernel header file 'linux/netfilter_bridge/ebtables.h' is required.

Workaround

  - Install kernel headers.

]) ],
                 [
                    #include <sys/socket.h>
                    #include <netinet/in.h>
                    #include <linux/netfilter_bridge/ebtables.h>
                 ])



dnl
dnl Check functions
dnl

AC_CHECK_FUNCS(malloc free memset memcpy strcmp snprintf socket)
AC_CHECK_FUNCS(getsockopt setsockopt close)



dnl
dnl Output
dnl

AC_CONFIG_HEADER(include/config.h)

AC_OUTPUT(Makefile
          src/Makefile
          include/Makefile
          test/Makefile)



